hugging face upload added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ classifiers = [
 dependencies = [
     "sentencepiece",
     "tokenizers",
-    "huggingface-hub"
+    "huggingface-hub",
+    "transformers"
 ]
 
 [project.optional-dependencies]
